[PM-316] Add manual sync function (#19)
* [PM-387] add api test stage, fix storage blob fetching

* fix linting, update tests

* [PM-316] add approval for UAT promotion to deploy pipeline

* fix: pipeline stages' dependencies

* fix: update storage tests

* [PM-316] add function for manual update

* [PM-316] update for list update task

* [PM-316] update openapi
