# openapi/index.yaml
@@ -43,6 +43,25 @@ paths:
           description: Verification of the signature failed
         "500":
           description: PagoPA services are not available or request is rejected
+    put:
+      operationId: SyncBuyerBanks
+      summary: Request for an update of buyerbank list 
+      description: Synchronize buyerbanks with MyBank web services
+      responses:
+        "200":
+          description: Request outcome
+          schema:
+            "$ref": "#/definitions/BuyerBanksPutResponse"
+          examples:
+            application/json:
+              result: success
+        "400":
+          description: Bad request
+        "401":
+          description: Verification of the signature failed
+        "500":
+          description: PagoPA services are not available or request is rejected
+    
 definitions:
     BuyerBanksGetResponse:
       type: object
@@ -83,4 +102,11 @@ definitions:
                         type: string
                       language:
                         type: string
+    BuyerBanksPutResponse:
+      type: object
+      required: 
+        - result
+      properties:
+        result:
+          type: string
 
